# twit-scrap

./: .gitignore  AGENTS.md  README.id.md  README.md  keys.py  keywords.txt  pyproject.toml  requirements.txt  x-login-page.md
.omo/drafts/: auto-cookie-generator.md
.omo/plans/: auto-cookie-generator.md
.omo/start-work/: ledger.jsonl
.playwright-mcp/: page-2026-06-18T08-29-22-687Z.yml
app/: helpers.py  main.py  state.py
app/data/: characters.py  fandoms.py
app/models/: db.py
app/routes/: accounts.py  analysis.py  auth.py  fandom.py  keywords.py  pages.py  scrape.py  tweets.py
app/static/: style.css
app/templates/: accounts.html  analysis.html  auth.html  base.html  dashboard.html  data.html  keywords.html  manage.html  scraper.html
config/: .env.example  settings.py
scripts/: analyze.py  auto_login.py  get_cookies.py  scraper.py
