[project]
name = "twit-scrap"
version = "0.1.0"
description = "Twitter scraper for searching and gathering data"
requires-python = ">=3.10"
dependencies = [
    "twikit==2.3.3",
    "aiofiles>=24.1.0",
    "pandas>=2.2.3",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.4",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",
    "playwright>=1.50",
]
